home features implemented with implementation of multiple artists for single track